--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@firstandthird/arc-macro-s3-cors",
+  "name": "arc-macro-s3-cors",
   "version": "1.1.0",
   "description": "Sets cors headers on s3 bucket",
   "main": "index.js",
